# Auto-Bot

./: .gitignore  .lintstagedrc.json  LICENSE.txt  README.md  electron-builder.json5  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
apps/desktop/: .eslintrc.js  .gitignore  .lintstagedrc.json  electron-builder.json  package.json  pnpm-lock.yaml  vite.config.ts
apps/desktop/electron/: source-path.ts
apps/desktop/src/: main.tsx
bot/: README.md  adaptor.py  image_operator.py  main.py  pyproject.toml  receiver.py
bot/core/: declaration.py  executor.py
bot/core/automation/: __init__.py  controller.py  detector.py  directive.py  monitor.py
bot/core/processor/: __init__.py  abc_processor.py  loop_processor.py  match_click_processor.py  region_click_processor.py  start_processor.py
electron/: file.ts  main.ts  path.ts  preload.ts  screenshot.ts  source-path.ts  utils.ts
electron/ipc/: event-names.ts  ipc-main.ts  ipc-renderer.ts
electron/managers/: bot-manager.ts  file-manager.ts  index.ts  screenshot-manager.ts  window-manager.ts
electron/wins/: index.ts  main-win.ts  monitor-win.ts  screenshot-win.ts  window-manager.ts
src/: App.tsx  main.tsx
src/components/: FlowPanel.tsx  ImageShowcase.tsx  ImageStore.tsx  ScreenshotButton.tsx  index.ts
src/components/dialog/: AddFlowDialog.tsx  (+1 more)
src/core/: flow.ts  index.ts  manager.ts
src/layouts/: HorizonBox.tsx
src/pages/: Editor.tsx  Monitor.tsx  Screenshot.tsx  Start.tsx  index.ts
src/store/: create-store.ts  hooks.ts  images.ts  monitor.ts  patterns.ts  version.ts
(+98 files in other folders)
