[tool.poetry]
name = "auto-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
opencv-python = "^4.8.0.76"
mss = "^9.0.1"
pynput = "^1.7.6"
dataclasses-json = "^0.6.1"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
